# doom-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  server.json
.github/workflows/: release.yml
csrc/: platform.c
npm/: package.json
scripts/: build-npm.sh  setup.sh
src/: doom.rs  log.rs  main.rs  paths.rs  renderer.rs
tests/: mcp_protocol.rs
